[package]
name = "os-str-generic"
version = "0.2.0"
authors = ["Cody P Schafer <dev@codyps.com>"]
keywords = [ "OsString", "OsStr", "ffi"]
include = [ "Cargo.toml", "src/**/*.rs", "tests/*.rs" ]
license = "Apache-2.0 OR MIT"
repository = "https://github.com/jmesmon/os-str-generic"
documentation = "https://docs.rs/os-str-generic"
description = "Add missing generic functionality to OsStr"

[dependencies]
